2016-08-25  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-519

	* src/doit.cc (doit_scat_fieldNormalize):

	If norm_debug=1, add additional output for each pressure level instead
	of just changing from out2 to out0.

2016-08-24 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-518

	* src/montecarlo.cc (Sample_los):
	Bug fix p30 branch: adapt pnd_field/scat_data_mono consistency check to scatt
	species&elements system (seems nobody used MC with non-random particles for a
	long time...).

2016-08-24 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-517

	* src/rt4.cc,h (sca_optpropCalc):
	Bug fix Fourier component integration. Check and correct Fourier
	component normalization.

	* src/m_rt4.cc (RT4Calc): 
	doit_i_field size check. Bug fix filling doit_i_field from RT4 output.

	* src/m_disort.cc (DisortInit), src/m_rt4.cc (RT4Init):
	Bug fix. Initialize doit_i_field size with stokes_dim.

	* src/disort.cc (pmomCalc, pmomCalc2):
	Made PFCT normalization check messages and thresholds consistent.

	* 3rdparty/polradtran/rt4/radtran4.f (RADTRANO):
	Increased max size of RT problem. More informative error output when
	allowed problem size is exceeded.

	* 3rdparty/polradtran/rt4/radscat4.f (CHECK_NORM):
	Outcomment PFCT normalization warning message. We leave that to ARTS.

	* controlfiles/general/agendas_surface.arts:
	Added another predefined agenda for lambertian surface.

2016-08-22  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-516

	* src/m_doit.cc (DoitCalc):

	Properly catch exceptions in OMP frequency loop. If an exception
	occurs, it is rethrown after the loop. Fixes bug reported by Jana.

2016-08-15 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-515

	* src/m_rt4.cc (RT4Calc): non-RT4 build fix.

2016-08-15 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-514

	* src/m_rt4.cc, methods.cc (RT4Calc), rt4.cc, rt4.h (sca_optpropCalc):
	Continue on RT4 interface implementation: preparation of scattering
	matrix data for RT4.
