@@ -1,3 +1,12 @@
+2016-08-25 Jana Mendrok  <jana.mendrok@chalmers.se>
+
+	* arts-2-3-520
+
+	* src/rt4.cc (sca_optpropCalc):
+	Bug fix in azim. oriented particles branch: actually use particle's own
+	azimuth grid in azimuthal integration, not the user-controlled one
+	created for random orientation particles. Found by Oliver.
+
 2016-08-25  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-519
